// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@graphcms/rich-text-react-renderer renders iframe 1`] = `
<div>
  <div
    style="position: relative; overflow: hidden; width: 100%; padding-top: 56.25%;"
  >
    <iframe
      allow="fullscreen"
      frameborder="0"
      loading="lazy"
      referrerpolicy="no-referrer"
      src="https://www.youtube.com/watch?v=Ylmd737tw5w"
      style="position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px; width: 100%; height: 100%;"
    />
  </div>
</div>
`;

exports[`@graphcms/rich-text-react-renderer renders inline content 1`] = `
<div>
  <p>
    <b>
      Hey, 
    </b>
    <i>
      how
    </i>
    <u>
      are
    </u>
    <code>
      you?
    </code>
  </p>
</div>
`;

exports[`@graphcms/rich-text-react-renderer renders inline content with custom renderers 1`] = `
<div>
  <p>
    <strong>
      Hey, 
    </strong>
    <i
      class="italic-class"
      style="color: red;"
    >
      how
    </i>
    <u
      role="button"
    >
      are
       test
    </u>
    <code
      style="font-style: italic;"
    >
      you?
    </code>
  </p>
</div>
`;

exports[`@graphcms/rich-text-react-renderer renders video 1`] = `
<div>
  <video
    controls=""
    height="400"
    src="https://media.graphcms.com/oWd7OYr5Q5KGRJW9ujRO"
    title="file_example_MP4_480_1_5MG.m4v"
    width="400"
  >
    <p>
      Your browser doesn't support HTML5 video. Here is a
       
      <a
        href="https://media.graphcms.com/oWd7OYr5Q5KGRJW9ujRO"
      >
        link to the video
      </a>
       instead.
    </p>
  </video>
</div>
`;

exports[`@graphcms/rich-text-react-renderer should render empty text spaces 1`] = `
<div>
  <p>
    Sweet black 
    <b>
      cap
    </b>
     
    <u>
      with
    </u>
     
    <i>
      embroidered
    </i>
     
    <b>
      GraphCMS
    </b>
     logo.
  </p>
</div>
`;

exports[`@graphcms/rich-text-react-renderer should replace all 
 in a string with <br /> elements 1`] = `
<div>
  <p>
    Hello,
    <br />
    ⁠My name is joão pedro,
    <br />
    ⁠I'm testing a bug
  </p>
</div>
`;

exports[`custom embeds and assets should render embed video, image, and audio assets 1`] = `
<div>
  <img
    loading="lazy"
    src="https://media.graphcms.com/dsQtt0ARqO28baaXbVy9"
  />
  <video
    controls=""
    height="100%"
    src="https://media.graphcms.com/7M0lXLdCQfeIDXnT2SVS"
    width="100%"
  >
    <p>
      Your browser doesn't support HTML5 video. Here is a
       
      <a
        href="https://media.graphcms.com/7M0lXLdCQfeIDXnT2SVS"
      >
        link to the video
      </a>
       instead.
    </p>
  </video>
  <audio
    controls=""
    src="https://media.graphcms.com/H9eZ7CISSBpAKxqdSwzg"
    style="display: block; max-width: 100%; height: auto;"
  >
    <p>
      Your browser doesn't support HTML5 audio. Here is a
       
      <a
        href="https://media.graphcms.com/H9eZ7CISSBpAKxqdSwzg"
      >
        link to the audio
      </a>
       instead.
    </p>
  </audio>
</div>
`;
